Add ObserveButton